メール通知機能とシード指定

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,10 @@ services:
       CLIENT_ID: ${CLIENT_ID}
       CLIENT_SECRET: ${CLIENT_SECRET}
       REDIRECT_URI: ${REDIRECT_URI}
+      EMAIL_SERVER: ${EMAIL_SERVER}
+      EMAIL_PORT: ${EMAIL_PORT}
+      EMAIL_FROM: ${EMAIL_FROM}
+      EMAIL_PASSWORD: ${EMAIL_PASSWORD}
+      EMAIL_TO: ${EMAIL_TO}
+      EMAIL_SUBJECT: ${EMAIL_SUBJECT}
+      EMAIL_BODY: ${EMAIL_BODY}
