--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,4 @@ services:
       EMAIL_TO: ${EMAIL_TO}
       EMAIL_SUBJECT: ${EMAIL_SUBJECT}
       EMAIL_BODY: ${EMAIL_BODY}
+      DB_FILE: ${DB_FILE}
