ソースをコピー

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -20,3 +20,5 @@ RUN if ! cat /etc/group | grep -e "^pip-global:" > /dev/null 2>&1; then groupadd
 COPY server/requirements.txt /tmp/pip-tmp/
 RUN pip3 --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requirements.txt \
    && rm -rf /tmp/pip-tmp
+
+COPY server /usr/local/server
