Fix Dockerfile to set the local timezone to Asia/Tokyo

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -21,4 +21,7 @@ COPY server/requirements.txt /tmp/pip-tmp/
 RUN pip3 --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requirements.txt \
    && rm -rf /tmp/pip-tmp
 
+# local timezone
+RUN sudo ln -fs /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
+
 COPY server /usr/local/server
